client/src/styles/index.css
@import "./theme";
@font-face {
  font-family: "Cubano";
  src:
    url("/fonts/cubano-sharp.woff2") format("woff2"),
    url("/fonts/cubano-sharp.woff") format("woff");
}
body {
  margin: 0;
}

#root {
  min-height: 100vh;
}

code {
  font-family:
    source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
}

html {
  --mi-border-radius: 3px;
  --mi-border-radius-x: 15px;
  --mi-border-radius-focus: 8px;

  --mi-border: solid 1px rgba(125, 125, 125, 0.5);

  --header-cover-sticky-height: 55px;

  --mi-font-family-stack:
    system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
    "Segoe UI Symbol", "Noto Color Emoji";

  --mi-font-size-normal: 1rem;
  --mi-font-size-small: 0.875rem;
  --mi-font-size-xsmall: 0.75rem;

  --mi-side-paddings-normal: 0rem 2rem;
  --mi-side-paddings-small: 0rem 1rem;
  --mi-side-paddings-xsmall: 0rem 0.5rem;

  --mi-container-full: 100%;
  --mi-container-big: 1106px;
  --mi-container-medium: 768px;
  --mi-container-small: 300px;
}

* {
  box-sizing: border-box;
}

html {
  font-size: 16px;
  min-height: 100%;
  scrollbar-gutter: stable;
}

html:has([open]:modal) {
  overflow: hidden;
}

body {
  background-color: var(--mi-normal-background-color);
  color: var(--mi-normal-foreground-color);
  font-family: var(--mi-font-family-stack);
}
body,
root {
  min-height: 100%;
  background-color: transparent;
}

/* Using mouse, hide focus ring from h1 focus on window.location change */
h1:focus {
  outline: none;
}

/* Using keyboard, show focus ring from h1 focus on window.location change */
h1:focus-visible {
  outline: 5px auto Highlight;
  outline: 5px auto -webkit-focus-ring-color;
}

h1,
.h1 {
  word-break: break-word;
  font-size: 2.5rem;
  line-height: 3rem;
  font-weight: normal;
  margin-bottom: unset;

  a {
    text-decoration: none;
  }
}

h2,
.h2 {
  font-size: 1.6rem;
  line-height: 1.8rem;
  font-weight: normal;
  margin-bottom: 0.7rem;
}

h3,
.h3 {
  font-size: 1.4rem;
  line-height: unset;
  font-weight: normal;
  margin-bottom: unset;
}

h4,
.h4 {
  font-size: 1.3rem;
  line-height: unset;
  padding-bottom: 0.75rem;
  margin-bottom: unset;
}

h5,
.h5 {
  font-size: 1.2rem;
  line-height: unset;
  padding-bottom: 0.75rem;
  margin-bottom: unset;
}

h6,
.h6 {
  font-size: 1.1rem;
  line-height: unset;
  padding-bottom: 0.75rem;
  margin-bottom: unset;
}

@media (max-width: 768px) {
  h1,
  .h1 {
    font-size: 2rem;
    line-height: 2.5rem;
  }

  h2,
  .h2 {
    font-size: 1.3rem;
    margin-bottom: 0.5rem;
  }
  h3,
  .h3 {
    font-size: 1.2rem;
    padding-bottom: 1rem;
  }
  h4,
  .h4 {
    font-size: 1.3rem;
    padding-bottom: 0.75rem;
  }
}
@media (max-width: 430px) {
  html {
    font-size: 16px;
  }
  h5,
  .h5 {
    font-size: 1rem;
    margin-bottom: 0rem;
  }
}

a {
  transition:
    0.1s color,
    0.1s background-color;
  color: var(--mi-primary-color);
  text-decoration: underline;
  word-break: break-word;
}

@media (prefers-color-scheme: dark) {
  a {
    color: var(--mi-primary-color);
  }
}

button {
  font-family: var(--mi-font-family-stack);
}

@keyframes slide-down {
  from {
    opacity: 0;
    transform: translateY(-3rem);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes slide-up {
  from {
    opacity: 0;
    transform: translateY(3rem);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes spinning {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@keyframes shake {
  0% {
    transform: translateX(0);
  }
  15% {
    transform: translateX(-4px);
  }
  30% {
    transform: translateX(4px);
  }
  45% {
    transform: translateX(-4px);
  }
  60% {
    transform: translateX(4px);
  }
  75% {
    transform: translateX(-2px);
  }
  100% {
    transform: translateX(0);
  }
}

@import "tailwindcss";

